# Claris-AI

./: Dockerfile  Dockerfile.web  README.md  pyproject.toml
claris/agent/: main.py
claris/api/: main.py  minimal.py
claris/core/: pipeline.py  reasoning.py
claris/core/perception/: __init__.py  bundle.py  config.py  ledger.py
tests/: test_pipeline.py  test_reasoning.py
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  config.ts  index.css  main.tsx  router.tsx  types.ts
web/src/api/: client.ts  hooks.ts
web/src/components/: CaptionCard.tsx  DropZone.tsx  EvidenceTimeline.tsx  PipelineDiagram.tsx  ScoreRadar.tsx  StageTimeline.tsx  TopBar.tsx  VideoPlayer.tsx
web/src/components/ui/: CopyButton.tsx
web/src/demo/: sampleEvents.ts  sampleRun.ts  useDemoStream.ts
web/src/lib/: evidence.ts  format.ts
web/src/pages/: Landing.tsx  NotFound.tsx  Processing.tsx  Results.tsx  Upload.tsx
web/src/store/: useInspectStore.ts  useRunStore.ts
