[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claris"
version = "0.1.0"
description = "CLARIS — multi-style video captioning that stays grounded in what the footage shows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CLARIS" }]
keywords = ["video-captioning", "multimodal", "gemma", "whisper", "fireworks"]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    # Required by FastAPI to parse multipart/form-data (the /upload endpoint). uvicorn's
    # [standard] extra already brings the websockets library for the progress stream.
    "python-multipart",
    "pydantic>=2",
    "httpx",
    "tenacity",
    "ffmpeg-python",
    "scenedetect",
    "opencv-python-headless",
    "imagehash",
    "pillow",
    "faster-whisper",
    "Cython<3",
    "setuptools<70",
    "numpy==1.26.4",
    "librosa",
    "structlog",
    # Required to load the declarative style contracts (styles/*.yaml). Not in the
    # supplied backend list, but generation cannot parse its contracts without it.
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
claris-agent = "claris.agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["claris"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests", "eval"]
asyncio_mode = "auto"
